k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: myapp
  ports:
  - name: service-port
    protocol: TCP
    port: 8080
    targetPort: http-web
